--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 /* Your CSS Code here. */
 .holder{
 	display: flex;
-	align-items: center;
+	justify-content: center;
 	flex-wrap: wrap;
 }
 .holder > div{
